UI: Worked on UI improvement and spacing issue (#9443)
* UI: Worked on UI improvement and spacing issue

* updated title id

* fixed selector tour

* updated glossary font to 16px

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
@@ -106,6 +106,9 @@
 .h-4 {
   height: 16px;
 }
+.h-5 {
+  height: 20px;
+}
 .h-7 {
   height: 28px;
 }
